# pytest-vcr

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  mkdocs.yml  pytest_vcr.py  setup.cfg  setup.py  tox.ini
docs/: changelog.md  configuration.md  hacking.md  index.md
tests/: conftest.py  test_vcr.py
