[metadata]
name = pytest-vcr
version = 1.0.3
author = Tomasz Kontusz
author_email = tomasz.kontusz@gmail.com
maintainer = Tomasz Kontusz
maintainer_email = tomasz.kontusz@gmail.com
license = MIT
url = https://github.com/ktosiek/pytest-vcr
description = Plugin for managing VCR.py cassettes
long_description = file: README.rst
classifiers = 
	Development Status :: 5 - Production/Stable
	Framework :: Pytest
	Intended Audience :: Developers
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License

[options]
py_modules = pytest_vcr
install_requires =
	pytest>=3.6.0
	vcrpy

[options.extras_require]
doc = mkdocs

[options.entry_points]
pytest11 =
	vcr = pytest_vcr

[bdist_wheel]
universal=1
